build/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biodiversity-analytics
  namespace: production
spec:
  selector:
    matchLabels:
      app: biodiversity-analytics
  template:
    metadata:
      labels:
        app: biodiversity-analytics
    spec:
      containers:
        - name: biodiversity-analytics
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/biodiversity-analytics:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7777
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "2000Mi"
              cpu: "2"
